--- a/app/src/main/res/drawable/ic_toman.xml
+++ b/app/src/main/res/drawable/ic_toman.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="@dimen/space_medium"
-    android:height="@dimen/space_medium"
+    android:width="14dp"
+    android:height="14dp"
     android:viewportWidth="14"
     android:viewportHeight="14">
     <path
