--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -8,6 +8,10 @@
         <variable
             name="viewModel"
             type="ir.jatlin.topmarket.ui.productdetails.ProductDetailsViewModel" />
+
+        <variable
+            name="product"
+            type="ir.jatlin.topmarket.core.network.model.product.NetworkProductDetails" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -60,6 +64,7 @@
                             android:ellipsize="end"
                             android:maxLines="1"
                             android:textColor="?attr/colorAccent"
+                            app:categories="@{product.categories}"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
@@ -72,6 +77,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginVertical="@dimen/space_medium"
+                            android:text="@{product.name}"
                             app:layout_constraintBottom_toTopOf="@id/product_rating_image"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -95,6 +101,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/space_very_small"
+                            android:text="@{product.averageRating}"
                             app:layout_constraintBottom_toBottomOf="@id/product_rating_image"
                             app:layout_constraintEnd_toEndOf="@id/product_rating_image"
                             app:layout_constraintEnd_toStartOf="@id/product_rating_image"
@@ -109,6 +116,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/space_very_small"
                             android:alpha="0.7"
+                            android:text="@{@string/rating_format(product.ratingCount)}"
                             app:layout_constraintBottom_toBottomOf="@id/product_avg_rating"
                             app:layout_constraintEnd_toStartOf="@id/product_avg_rating"
                             app:layout_constraintTop_toTopOf="@id/product_avg_rating"
@@ -202,6 +210,7 @@
 
                             <com.google.android.material.textview.MaterialTextView
                                 style="@style/TextAppearance.MarketApp.LabelMedium"
+                                htmlText="@{product.description}"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:maxLines="3"
@@ -263,6 +272,7 @@
                 android:drawablePadding="@dimen/space_very_small"
                 android:gravity="center_vertical"
                 app:drawableStartCompat="@drawable/ic_toman"
+                app:price="@{product.price}"
                 tools:text="20,000" />
 
             <com.google.android.material.button.MaterialButton
@@ -270,6 +280,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|center_vertical"
+                android:onClick="@{() -> viewModel.addToCart()}"
                 android:text="@string/add_to_cart"
                 app:contentPadding="@dimen/space_small"
                 app:icon="@drawable/ic_add_shopping_cart_24" />
