--- a/app/src/main/res/menu/product_details_menu.xml
+++ b/app/src/main/res/menu/product_details_menu.xml
@@ -4,14 +4,14 @@
 
 
     <item
-        android:id="@+id/shopping_card"
+        android:id="@+id/action_shopping_card"
         android:contentDescription="@string/content_cart"
         android:icon="@drawable/ic_shop_24"
         android:title="@string/action_cart"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/like"
+        android:id="@+id/action_like"
         android:contentDescription="@string/action_like"
         android:icon="@drawable/ic_like_24"
         android:title="@string/action_like"
