feat(binding) : Implement clicking and navigate to details screen

--- a/app/src/main/res/layout/product_category_view.xml
+++ b/app/src/main/res/layout/product_category_view.xml
@@ -25,7 +25,7 @@
             tools:text="محبوب ترین کالا ها" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_show_all_products"
+            android:id="@+id/show_more"
             style="@style/TextAppearance.MarketApp.TitleMedium"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
