--- a/app/src/main/res/layout/layout_product_details_app_bar.xml
+++ b/app/src/main/res/layout/layout_product_details_app_bar.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
-        style="@style/Widget.Market.AppBar"
+    </data>
+
+    <merge
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        app:liftOnScroll="true"
-        tools:parentTag="androidx.coordinatorlayout.widget.CoordinatorLayout">
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar_layout"
+            style="@style/Widget.Market.AppBar"
             android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            app:layout_scrollFlags="enterAlways|exitUntilCollapsed"
-            app:menu="@menu/product_details_menu"
-            app:navigationIcon="@drawable/ic_close_24">
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:liftOnScroll="true"
+            tools:parentTag="androidx.coordinatorlayout.widget.CoordinatorLayout">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                app:layout_scrollFlags="enterAlways|exitUntilCollapsed"
+                app:menu="@menu/product_details_menu"
+                app:navigationIcon="@drawable/ic_close_24">
 
 
-        </com.google.android.material.appbar.MaterialToolbar>
+            </com.google.android.material.appbar.MaterialToolbar>
 
-    </com.google.android.material.appbar.AppBarLayout>
-</merge>
+        </com.google.android.material.appbar.AppBarLayout>
+    </merge>
+</layout>
