--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/include_app_bar"
                 layout="@layout/layout_product_details_app_bar" />
 
-            <ScrollView
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -44,14 +44,17 @@
                         android:id="@+id/product_image_slider"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:clipToPadding="false"
                         android:fitsSystemWindows="true"
                         android:orientation="horizontal"
-                        android:paddingVertical="@dimen/space_medium"
+                        android:padding="@dimen/space_medium"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         app:layout_constraintBottom_toTopOf="@id/product_properties_container"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:reverseLayout="true"
+                        tools:listitem="@layout/image_slider_item_view" />
 
 
                     <androidx.appcompat.widget.LinearLayoutCompat
@@ -67,11 +70,12 @@
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="@dimen/space_medium">
 
                             <com.google.android.material.textview.MaterialTextView
                                 android:id="@+id/product_categories"
-                                style="@style/TextAppearance.MarketApp.LabelMedium"
+                                style="@style/TextAppearance.MarketApp.BodySmall"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:ellipsize="end"
@@ -208,10 +212,10 @@
 
                             <com.google.android.material.textview.MaterialTextView
                                 android:id="@+id/overview"
-                                style="@style/TextAppearance.MarketApp.TitleSmall"
+                                style="@style/TextAppearance.MarketApp.TitleMedium"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="@string/product_overview"
+                                android:text="@string/product_description"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
@@ -225,7 +229,7 @@
                                 android:minHeight="@dimen/space_large">
 
                                 <com.google.android.material.textview.MaterialTextView
-                                    style="@style/TextAppearance.MarketApp.LabelMedium"
+                                    style="@style/TextAppearance.MarketApp.BodySmall"
                                     htmlText="@{viewModel.productDetails.description}"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -264,7 +268,7 @@
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="200dp"
+                        android:layout_marginTop="@dimen/space_medium"
                         android:fitsSystemWindows="true"
                         android:orientation="vertical"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -294,7 +298,7 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </ScrollView>
+            </androidx.core.widget.NestedScrollView>
 
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
@@ -303,14 +307,15 @@
             android:id="@+id/sale_detail_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_gravity="bottom"
             android:fitsSystemWindows="true"
             app:cardCornerRadius="0dp"
+            app:cardElevation="@dimen/space_very_small"
             app:contentPaddingBottom="@dimen/space_small"
             app:contentPaddingLeft="@dimen/space_medium"
             app:contentPaddingRight="@dimen/space_medium"
-            app:contentPaddingTop="@dimen/space_small">
+            app:contentPaddingTop="@dimen/space_small"
+            app:strokeWidth="0dp">
 
 
             <com.google.android.material.textview.MaterialTextView
