feat(view): Define new view holder for each categories

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,8 @@
     <dimen name="space_large">@dimen/_32sdp</dimen>
     <dimen name="space_very_large">@dimen/_48sdp</dimen>
 
+    <dimen name="category_container_width">@dimen/_64sdp</dimen>
+    <dimen name="category_image_height">@dimen/_100sdp</dimen>
+
 
 </resources>
