--- a/app/src/main/res/layout/category_item_view.xml
+++ b/app/src/main/res/layout/category_item_view.xml
@@ -1,6 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="@dimen/_96sdp"
+    android:layout_height="@dimen/_146sdp"
+    app:cardCornerRadius="@dimen/space_small"
+    app:cardElevation="@dimen/space_very_small"
+    app:strokeWidth="0dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingVertical="@dimen/space_small">
+
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/category_image"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/category_image_height"
+            android:layout_marginBottom="@dimen/space_small"
+            app:layout_constraintBottom_toTopOf="@id/category_name"
+            app:layout_constraintDimensionRatio="3:4"
+            app:layout_constraintEnd_toEndOf="@id/glv_end"
+            app:layout_constraintStart_toStartOf="@id/glv_start"
+
+            app:srcCompat="@drawable/ic_digi_smile_24" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/category_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/space_very_small"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:textAppearance="@style/TextAppearance.MarketApp.LabelMedium"
+            app:layout_constraintBottom_toTopOf="@id/product_count"
+            app:layout_constraintEnd_toEndOf="@id/glv_end"
+            app:layout_constraintStart_toStartOf="@id/glv_start"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="لوازم و تجهیزات پزشکی" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/product_count"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:textAppearance="@style/TextAppearance.MarketApp.LabelMedium"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/glv_end"
+            app:layout_constraintStart_toStartOf="@id/glv_start"
+            tools:text="+67000 کالا" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/glv_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="@dimen/space_small" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/glv_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="@dimen/space_small" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</com.google.android.material.card.MaterialCardView>
