fix(status-bar): Define an attribute to indicate the background color of the status bar can be changed

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
 
     <color name="blue_sky">#19BFD3</color>
     <color name="blue_sky700">#0288D1</color>
+
+    <color name="transparent">#0fff</color>
 </resources>
