feat(domain): Get categories and show them on screen

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/homeFragment"
+        android:contentDescription="@string/home"
+        android:icon="@drawable/ic_home"
+        android:title="@string/home" />
+
+    <item
+        android:id="@+id/productCategoryFragment"
+        android:contentDescription="@string/categories"
+        android:icon="@drawable/ic_category_24"
+        android:title="@string/categories" />
+
 </menu>
