--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,5 +13,8 @@
         <item name="android:windowLightStatusBar" tools:targetApi="m">@bool/use_light_status</item>
         <item name="android:statusBarColor">@color/transparent</item>
         <!-- Customize your theme here. -->
+
+        <!-- Widget style -->
+        <item name="bottomNavigationStyle">@style/Widget.Market.BottomNavigationView</item>
     </style>
 </resources>
