feat(view): Add search bar view to the related layouts and fix some issues with app bar layout

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,10 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
+        <include
+            android:id="@+id/include_search_bar"
+            layout="@layout/layout_search_app_bar" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/product_categories"
             android:layout_width="match_parent"
