--- a/app/src/main/res/layout/product_item_view.xml
+++ b/app/src/main/res/layout/product_item_view.xml
@@ -68,7 +68,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:drawablePadding="@dimen/space_very_small"
-        android:textAppearance="@style/TextAppearance.MarketApp.BodySmall"
+        android:textAppearance="@style/TextAppearance.MarketApp.TitleSmall"
+        android:textStyle="bold"
         app:drawableStartCompat="@drawable/ic_toman"
         app:layout_constraintBottom_toTopOf="@id/product_regular_price"
         app:layout_constraintEnd_toStartOf="@+id/product_discount"
@@ -85,8 +86,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_small"
-        android:alpha="0.7"
-        android:textAppearance="@style/TextAppearance.MarketApp.BodySmall"
+        android:alpha="0.5"
+        android:textAppearance="@style/TextAppearance.MarketApp.TitleSmall"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/product_price"
