--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -13,6 +13,7 @@
         <action
             android:id="@+id/action_homeFragment_to_productDetailsFragment"
             app:destination="@id/productDetailsFragment"
+            app:popUpTo="@id/productDetailsFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
