--- a/app/src/main/res/layout/fragment_product_category.xml
+++ b/app/src/main/res/layout/fragment_product_category.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".ui.categories.ProductCategoryFragment">
+
+    <include
+        android:id="@+id/include_category_search_bar"
+        layout="@layout/layout_search_app_bar" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/product_categories_group"
@@ -13,7 +19,8 @@
         android:clipToPadding="false"
         android:paddingVertical="@dimen/space_small"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:reverseLayout="true"
         tools:listitem="@layout/category_display_group_view" />
 
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
