--- a/app/src/main/res/layout/image_slider_item_view.xml
+++ b/app/src/main/res/layout/image_slider_item_view.xml
@@ -13,6 +13,7 @@
         android:id="@+id/slider_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="centerCrop"
         tools:src="@drawable/ic_digi_smile_24" />
 
 </com.google.android.material.card.MaterialCardView>
