--- a/app/src/main/res/layout/layout_search_app_bar.xml
+++ b/app/src/main/res/layout/layout_search_app_bar.xml
@@ -48,7 +48,7 @@
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_arrow_forward_24" />
+                    app:srcCompat="@drawable/ic_search_24" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
