--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,7 +6,7 @@
     <data>
 
         <variable
-            name="viewModel"
+            name="vModel"
             type="ir.jatlin.topmarket.ui.search.SearchViewModel" />
 
     </data>
