--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -9,18 +9,21 @@
         android:id="@+id/homeFragment"
         android:name="ir.jatlin.topmarket.ui.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_productDetailsFragment"
             app:destination="@id/productDetailsFragment"
             app:popUpTo="@id/productDetailsFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/to_searchFragment"
+            app:destination="@id/searchFragment" />
     </fragment>
     <fragment
         android:id="@+id/productDetailsFragment"
         android:name="ir.jatlin.topmarket.ui.productdetails.ProductDetailsFragment"
         android:label="fragment_product_details"
-        tools:layout="@layout/fragment_product_details" >
+        tools:layout="@layout/fragment_product_details">
         <argument
             android:name="productId"
             app:argType="integer" />
@@ -30,4 +33,9 @@
         android:name="ir.jatlin.topmarket.ui.categories.ProductCategoryFragment"
         android:label="fragment_product_category"
         tools:layout="@layout/fragment_product_category" />
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="ir.jatlin.topmarket.ui.search.SearchFragment"
+        android:label="SearchFragment"
+        tools:layout="@layout/fragment_search" />
 </navigation>
